<resources>
    <string name="app_name">BiTSy</string>
    <string name="text_field__6_digit_pin">6+ digits PIN</string>
    <string name="text_field__confirm_pin">Confirm PIN</string>
    <string name="text__brain_key">BrainKey</string>
    <string name="button__import">Import</string>
    <string name="button__create">Create</string>
    <string name="title_receive">Receive</string>
    <string name="title_send">Send</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_settings">Settings</string>
    <string name="title__general">General</string>
    <string name="msg__close_timer">Automatically close BiTSy after 3 minutes of inactivity</string>
    <string name="msg__night_mode">Night mode</string>
    <string name="title__backup">Backup</string>
    <string name="msg__brainkey_description">BrainKey. Account recovery words that can be captured or copied, but not
        edited.
    </string>
    <string name="msg__brainkey_info">Print this out, or write it down. Anyone with access to your recovery key will
        have access to funds within this wallet.
    </string>
    <string name="btn__view_and_copy"><![CDATA[View & Copy]]></string>
    <string name="title__bugs_or_ideas">Bugs or Ideas?</string>
    <string name="msg__bugs_or_ideas">Telegram chat: http://t.me/Agorise\nEmail: Agorise@protonmail.ch\nOpen Source:
        https://github.com/Agorise
    </string>
</resources>