<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/home_dest">

    <fragment
        android:id="@+id/home_dest"
        android:name="cy.agorise.bitsybitshareswallet.fragments.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/receive_action"
            app:destination="@+id/receive_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>

        <action
            android:id="@+id/send_action"
            app:destination="@id/send_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>

        <action
            android:id="@+id/send_action_camera"
            app:destination="@id/send_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>

        <action
            android:id="@+id/license_action"
            app:destination="@id/license_dest"/>

    </fragment>

    <fragment
        android:id="@+id/merchants_dest"
        android:name="cy.agorise.bitsybitshareswallet.fragments.MerchantsFragment"
        android:label="@string/title_merchants_and_tellers"
        tools:layout="@layout/fragment_merchants"/>

    <fragment
        android:id="@+id/transactions_dest"
        android:name="cy.agorise.bitsybitshareswallet.fragments.TransactionsFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transactions">

        <action
            android:id="@+id/e_receipt_action"
            app:destination="@id/e_receipt_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/e_receipt_dest"
        android:name="cy.agorise.bitsybitshareswallet.fragments.EReceiptFragment"
        android:label="@string/title_e_receipt"
        tools:layout="@layout/fragment_e_receipt">

        <argument
            android:name="transferId"
            app:argType="string"
            android:defaultValue="0" />
    </fragment>

    <fragment
        android:id="@+id/settings_dest"
        android:name="cy.agorise.bitsybitshareswallet.fragments.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings"/>

    <fragment
        android:id="@+id/receive_dest"
        android:name="cy.agorise.bitsybitshareswallet.fragments.ReceiveTransactionFragment"
        android:label="@string/title_receive"
        tools:layout="@layout/fragment_receive_transaction"/>

    <fragment
        android:id="@+id/send_dest"
        android:name="cy.agorise.bitsybitshareswallet.fragments.SendTransactionFragment"
        android:label="@string/title_send"
        tools:layout="@layout/fragment_send_transaction">

        <argument
            android:name="openCamera"
            app:argType="boolean"
            android:defaultValue="false" />

        <argument
            android:name="to"
            android:defaultValue=" " />

        <argument
            android:name="amount"
            app:argType="float"
            android:defaultValue="0.0" />

        <argument
            android:name="asset"
            android:defaultValue=" " />

        <argument
            android:name="memo"
            android:defaultValue=" " />

        <deepLink app:uri="www.bitshares.com/{to}/{amount}/{asset}/{memo}" />
    </fragment>

    <fragment
        android:id="@+id/license_dest"
        android:name="cy.agorise.bitsybitshareswallet.fragments.LicenseFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_license">

        <action
            android:id="@+id/import_brainkey_action"
            app:destination="@id/import_brainkey_dest"/>

    </fragment>

    <fragment
        android:id="@+id/import_brainkey_dest"
        android:name="cy.agorise.bitsybitshareswallet.fragments.ImportBrainkeyFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_import_brainkey">

        <action
            android:id="@+id/create_account_action"
            app:destination="@id/create_account_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>

        <action
            android:id="@+id/home_action"
            app:popUpTo="@id/home_dest"/>

    </fragment>

    <fragment
        android:id="@+id/create_account_dest"
        android:name="cy.agorise.bitsybitshareswallet.fragments.CreateAccountFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_create_account">

        <action
            android:id="@+id/home_action"
            app:popUpTo="@id/home_dest"/>

    </fragment>

</navigation>