<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAccountName"
            style="@style/Widget.Bitsy.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text__bitshares_account_name">

            <cy.agorise.bitsybitshareswallet.views.MyTextInputEditText
                android:id="@+id/tietAccountName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:digits="abcdefghijklmnopqrstuvwxyz0123456789-"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPin"
            style="@style/Widget.Bitsy.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_same_topic"
            android:hint="@string/text_field__6_digit_pin"
            app:passwordToggleEnabled="true">

            <cy.agorise.bitsybitshareswallet.views.MyTextInputEditText
                android:id="@+id/tietPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPinConfirmation"
            style="@style/Widget.Bitsy.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_same_topic"
            android:hint="@string/text_field__confirm_pin"
            app:passwordToggleEnabled="true">

            <cy.agorise.bitsybitshareswallet.views.MyTextInputEditText
                android:id="@+id/tietPinConfirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvBrainKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/outline_rounded_corners"
            android:gravity="center"
            android:padding="8dp"
            android:layout_marginTop="@dimen/spacing_different_topic"
            tools:text="SAMPLE BRAINKEY SAMPLE BRAINKEY SAMPLE BRAINKEY SAMPLE BRAINKEY SAMPLE BRAINKEY SAMPLE BRAINKEY SAMPLE BRAINKEY"
            android:textAppearance="@style/TextAppearance.Bitsy.Body1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg__brainkey_info"
            android:textAppearance="@style/TextAppearance.Bitsy.Body2"
            android:gravity="center"
            android:padding="8dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_different_topic">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCreate"
                style="@style/Widget.Bitsy.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="4dp"
                android:text="@string/button__create"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                style="@style/Widget.Bitsy.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_toStartOf="@id/btnCreate"
                android:text="@android:string/cancel"/>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>
